--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
         <p contenteditable>This is the medium length description right here.</p>
         <div class="visual"></div>
       </div>
-      <div class="card"><h3>Title - Card 2</h3></div>
-      <div class="card"><h3>Title - Card 3</h3></div>
+      <div class="card">
+        <h3>Title - Card 2</h3>
+        <p contenteditable>
+          Long Description. Lorem ipsum dolor sit, amet consectetur adipisicing
+          elit.
+        </p>
+        <div class="visual"></div>
+      </div>
+
+      <div class="card">
+        <h3>Title - Card 3</h3>
+        <p contenteditable>Short Description.</p>
+        <div class="visual"></div>
+      </div>
     </div>
   </body>
 </html>
